refactor: prj name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "table-search-sort",
+  "name": "table-query-search-sort",
   "private": true,
   "version": "0.0.0",
   "type": "module",
